# CfdOF

./: .codespellrc  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CfdAnalysis.py  CfdCartTools.py  CfdCaseWriterFoam.py  CfdConsoleProcess.py  CfdConverterTo2D.py  CfdExample.py  CfdFaceSelectWidget.py  CfdFluidBoundary.py  CfdFluidMaterial.py  CfdGmshTools.py  CfdImportSTL.py  CfdInitialiseFlowField.py  CfdMesh.py  CfdMeshCart.py  CfdMeshGmsh.py  CfdMeshImport.py  CfdMeshImporterTools.py  CfdMeshRefinement.py  CfdMeshRegion.py  CfdMeshTools.py  CfdPhysicsSelection.py  CfdPorousZone.py  CfdPreferencePage.py  CfdPreferencePage.ui  CfdResidualPlot.py  CfdResult.py  CfdResultFoamVTK.py  CfdRunnableFoam.py  CfdSelectionObserver.py  CfdSolver.py  CfdSolverFoam.py  (+96 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature.md  reporting.md
CfdOF/: CfdAnalysis.py  CfdConsoleProcess.py  CfdDependencyData.py  CfdFaceSelectWidget.py  CfdImportSTL.py  CfdOpenPreferencesPage.py  CfdPreferencePage.py  CfdReloadWorkbench.py  CfdRemotePreferencePage.py  CfdTestCommands.py  CfdTimePlot.py  CfdTools.py  PreviewShapes.py  TemplateBuilder.py  WindowsRunWrapper.py
CfdOF/Mesh/: CfdDynamicMeshRefinement.py  CfdMesh.py  CfdMeshRefinement.py  CfdMeshTools.py  TaskPanelCfdDynamicMeshInterfaceRefinement.py  TaskPanelCfdDynamicMeshRefinement.py  TaskPanelCfdDynamicMeshShockRefinement.py  TaskPanelCfdMesh.py  TaskPanelCfdMeshRefinement.py  _TaskPanelCfdMesh.py  _TaskPanelCfdMeshRefinement.py  __init__.py
CfdOF/PostProcess/: CfdReportingFunction.py  CfdReportingFunctions.py  TaskPanelCfdReportingFunction.py  TaskPanelCfdReportingFunctions.py  __init__.py
CfdOF/Solve/: CfdCaseWriterFoam.py  CfdFluidBoundary.py  CfdFluidMaterial.py  CfdInitialiseFlowField.py  CfdMeanVelocityForce.py  CfdPhasePhysicsSelection.py  CfdPhysicsSelection.py  CfdRunnableFoam.py  CfdScalarTransportFunction.py  CfdSolidMaterial.py  CfdSolverFoam.py  CfdZone.py  TaskPanelCfdFluidBoundary.py  TaskPanelCfdFluidProperties.py  TaskPanelCfdInitialiseInternalFlowField.py  TaskPanelCfdMeanVelocityForce.py  TaskPanelCfdPhasePhysicsSelection.py  TaskPanelCfdPhysicsSelection.py  TaskPanelCfdScalarTransportFunctions.py  TaskPanelCfdSolidProperties.py  TaskPanelCfdSolverControl.py  TaskPanelCfdZone.py  _TaskPanelCfdFluidBoundary.py  _TaskPanelCfdFluidProperties.py  _TaskPanelCfdInitialiseInternalFlowField.py  _TaskPanelCfdPhysicsSelection.py  _TaskPanelCfdSolverControl.py  _TaskPanelCfdZone.py
Data/CfdFluidMaterialProperties/: AirCompressible.FCMat  AirIsothermal.FCMat  AluminiumSolid.FCMat  Gasoline.FCMat  OilSAE10W.FCMat  Readme.txt  SeaWater.FCMat  WaterIncompressible.FCMat  WaterIsothermal.FCMat
Data/Templates/: README.md
Demos/BatteryCooling/: BatteryCooling.FCMacro  BatteryCooling.FCStd  README  README.md  tesla-4680-battery-cooling.FCStd
Demos/DamBreak3D/: 00-RunAll.FCMacro  01-geom.FCMacro  02-analysis.FCMacro  03-probes.FCMacro  04-adaptiveMesh.FCMacro  DamBreak3D.FCStd  README.md
Demos/Duct/: 00-RunAll.FCMacro  Duct.FCStd  (+5 more)
FoamCaseBuilder/: BasicBuilder.py  FoamTemplateString.py  MultiphaseBuilder.py  Readme.md  Roadmap.md  TestBuilder.py  TestFoamDetection.py  TestRunFoamApplication.py  ThermalBuilder.py  __init__.py  utility.py
Gui/: CfdPreferencePage.ui  CfdRemotePreferencePage.ui  TaskPanelCfdDynamicMeshInterfaceRefinement.ui  TaskPanelCfdDynamicMeshRefinement.ui  TaskPanelCfdDynamicMeshShockRefinement.ui  TaskPanelCfdFluidBoundary.ui  TaskPanelCfdFluidProperties.ui  TaskPanelCfdInitialiseInternalField.ui  TaskPanelCfdListOfFaces.ui  TaskPanelCfdMeanVelocityForce.ui  TaskPanelCfdMesh.ui  TaskPanelCfdMeshRefinement.ui  TaskPanelCfdReportingFunctions.ui  TaskPanelCfdScalarTransportFunctions.ui  TaskPanelCfdSolidProperties.ui  TaskPanelCfdSolverControl.ui  TaskPanelCfdZone.ui  TaskPanelPhasePhysics.ui  TaskPanelPhysics.ui
Translations/: CfdOF.ts  CfdOF_ar.qm  CfdOF_ar.ts  CfdOF_de.qm  CfdOF_de.ts  CfdOF_es-AR.qm  CfdOF_es-AR.ts  CfdOF_es-ES.qm  CfdOF_es-ES.ts  CfdOF_ja.qm  CfdOF_ja.ts  CfdOF_pl.qm  CfdOF_pl.ts  CfdOF_zh-TW.qm  CfdOF_zh-TW.ts  update_translation.sh
data/: buildCfMeshOnBlueCFD.sh
(+717 files in other folders)
