<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1">
    <name>CfdOF</name>
    <description>Computational Fluid Dynamics (CFD) for FreeCAD based on OpenFOAM</description>
    <version>1.31.4</version>
    <maintainer email="oliveroxtoby@gmail.com">Oliver Oxtoby</maintainer>
    <license file="LICENSE">LGPL-2.0-or-later</license>
    <url type="repository" branch="master">https://github.com/jaheyns/CfdOF</url>
    <url type="documentation">https://github.com/jaheyns/CfdOF/README.md</url>
    <freecadmin>0.20.0</freecadmin>
    <content>
        <workbench>
            <classname>CfdOFWorkbench</classname>
            <subdirectory>./</subdirectory>
            <icon>Gui/Icons/cfd.svg</icon>
            <depend>matplotlib</depend>
        </workbench>
    </content>
</package>
